--- a/authSample.html
+++ b/authSample.html
@@ -1,6 +1,13 @@
 <html>
 <head>
   <link rel="manifest" href="manifest.webmanifest">
+  <script>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').then(function() {
+        console.log('Service Worker Registered');
+      };
+    }
+  </script>
 </head>
 <body>
   <script>
