Added apple web app tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       });
     }
   </script>
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="BikeShare">
+  <link rel="apple-touch-icon" sizes="512x512" href="appicons/icon512.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="appicons/icon192.png">
 </head>
 <body>
   <script>
