Included Js/main.js to alert functionality

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="manifest" href="manifest.webmanifest">
@@ -125,7 +126,7 @@
 <button id="sign-in-or-out-button">Sign In/Authorize</button><br>
 <button id="revoke-access-button">Revoke access</button><br>
 <button id="checkout-bike">Check out bike</button><br>
-<div id="myalert" class="alert">
+<div id="myalert" class="alerting">
  <div class="alert-content">
  <span class="close">&times;</span>
   <p>It Works!</p>
@@ -140,5 +141,6 @@
         onreadystatechange="if (this.readyState === 'complete') this.onload()">
 </script>
 </main>
+<script src="js/main.js"></script>
 </body>
 </html>
