Narrow down domain names

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         'apiKey': 'AIzaSyCdKpwBnERdfa4K0qZ5FT9ZkTMQa9ihbZM',
         'discoveryDocs': [discoveryUrl],
         'clientId': '304362973762-0aca95v708o5fq2vad1lq031jv6a7v3p.apps.googleusercontent.com',
+	hosted_domain: 'apsva.us',
         'scope': SCOPE
     }).then(function () {
       GoogleAuth = gapi.auth2.getAuthInstance();
