--- a/index.html
+++ b/index.html
@@ -129,7 +129,20 @@
 <div id="myalert" class="alerting">
  <div class="alert-content">
  <span class="close">&times;</span>
-  <p>It Works!</p>
+  <ul>
+    <li><button disabled>Bike1</button></li>
+    <li><button>Bike2</button></li>
+    <li><button>Bike3</button></li>
+    <li><button>Bike4</button></li>
+    <li><button>Bike5</button></li>
+    <li><button>Bike6</button></li>
+    <li><button>Bike7</button></li>
+    <li><button>Bike8</button></li>
+    <li><button>Bike9</button></li>
+    <li><button>Bike10</button></li>
+    <li><button>Bike11</button></li>
+    <li><button>Bike12</button></li>
+  </ul>
  </div>
 </div>
 <div id="auth-status"></div><br>
