Button list in alert container (#4)
* Addded list buttons

* Updated responsive app

* Updated button color once disabled

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/grid.css">
@@ -129,7 +132,20 @@
 <div id="myalert" class="alerting">
  <div class="alert-content">
  <span class="close">&times;</span>
-  <p>It Works!</p>
+  <ul>
+    <li><button disabled>Bike1</button></li>
+    <li><button>Bike2</button></li>
+    <li><button>Bike3</button></li>
+    <li><button>Bike4</button></li>
+    <li><button>Bike5</button></li>
+    <li><button>Bike6</button></li>
+    <li><button>Bike7</button></li>
+    <li><button>Bike8</button></li>
+    <li><button>Bike9</button></li>
+    <li><button>Bike10</button></li>
+    <li><button>Bike11</button></li>
+    <li><button>Bike12</button></li>
+  </ul>
  </div>
 </div>
 <div id="auth-status"></div><br>
